# thesis-momentum

./: implementation-notes.html  plan.html  plan_build_v1.html  plan_improvement.html  research_review.html
narrative-ledger/: .gitignore  README.md  SKILL.md  pyproject.toml
narrative-ledger/config/: watchlist.yaml
narrative-ledger/ledger/: calls.csv  candidates.py  check.py  cli.py  conviction.py  expectations.py  ingest.py  marketdata.py  migrate.py  models.py  render.py  router.py  storage.py  trackrecord.py  validate.py
narrative-ledger/ledger/templates/: candidate.html.j2
narrative-ledger/records/: migration-manifest.json
narrative-ledger/records/candidates/: cand_8161943c869a771ffab93d22.json  cand_a09ff47525e7b1ad09b0763f.json
narrative-ledger/records/episodes/: ep_4ce51033fcce788787a926b7.json  ep_56bc72798d9eae624b9c7a19.json  ep_81e8d36d53e3bc31d1844751.json
narrative-ledger/records/evidence/: ev_00be5671cabd8deff1f0cfb5.json  ev_02b68f8e3ba7df1b4e942d2d.json  ev_06ee9e5a6b5918c8b19a3a00.json  ev_08a790d4982b4b659516b538.json  ev_11a8280f9079d81e400bd959.json  ev_161792c21cf7e6d1a40381dd.json  ev_16f820e71dde974bee8521a2.json  (+43 more)
narrative-ledger/references/: candidate_gate.md  contracts.md  decision_sizing.md  migration.md  monitoring.md  priced_in.md  signal_capture.md  source_qualification.md  underwriting.md  verification.md
narrative-ledger/templates/: report.html.j2
narrative-ledger/tests/: test_candidates.py  test_check.py  test_cli.py  test_firewall.py  test_migration.py  test_render.py  test_router.py  test_storage.py  v2_factory.py
(+21 files in other folders)
