[project]
name = "narrative-ledger"
version = "0.1.0"
description = "A skill-driven accountability engine for borrowed macro/thematic theses. Code owns the math; the agent owns the judgment; a JSON contract and an outcome loop keep both honest."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "feedparser",
    "atproto",
    "yfinance>=1.5",
    "pandas",
    "jinja2",
    "markdownify",
    "trafilatura",
    "tldextract",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
