[project]
name = "narrative-ledger"
version = "2.0.0"
description = "A source-to-candidate research workflow for independently validating public market theses."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2",
    "jinja2",
    "pyyaml",
]

[project.scripts]
ledger = "ledger.cli:main"

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "types-Jinja2",
    "types-PyYAML",
]

[tool.setuptools]
packages = ["ledger"]

[tool.setuptools.package-data]
ledger = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["ledger", "tests"]
